修改华为手机竖屏不能推送的问题

--- a/Prj-Android/app/src/main/AndroidManifest.xml
+++ b/Prj-Android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:hardwareAccelerated="true" />
         <activity
             android:name=".InputActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true" />
         <activity
             android:name=".PullActivity"
